docs/api/qiskit/0.34/qiskit.primitives.Sampler.md
# Sampler[¶](#sampler "Permalink to this headline")

<span id="undefined" />

`Sampler(circuits, parameters=None)`

Bases: `qiskit.primitives.base_sampler.BaseSampler`

Sampler class

**Parameters**

**circuits** – circuits to be executed

**Raises**

**QiskitError** – if some classical bits are not used for measurements.

## Methods

|                                                                                                              |                                      |
| ------------------------------------------------------------------------------------------------------------ | ------------------------------------ |
| [`close`](qiskit.primitives.Sampler.close#qiskit.primitives.Sampler.close "qiskit.primitives.Sampler.close") | Close the session and free resources |

## Attributes

<span id="undefined" />

### circuits

Quantum circuits

**Returns**

quantum circuits

<span id="undefined" />

### parameters

Parameters of quantum circuits

**Returns**

Parameter list of the quantum circuits
