docs/api/qiskit/0.36/qiskit.primitives.Sampler.md
---
title: Sampler
description: API reference for qiskit.primitives.Sampler
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.primitives.Sampler
---

# Sampler[¶](#sampler "Permalink to this headline")

<span id="qiskit.primitives.Sampler" />

`Sampler(circuits: Iterable[QuantumCircuit] | QuantumCircuit, *args, parameters: Iterable[Iterable[Parameter]] | None = None, **kwargs)`

Bases: [`qiskit.primitives.base_sampler.BaseSampler`](qiskit.primitives.BaseSampler "qiskit.primitives.base_sampler.BaseSampler")

Sampler class

**Parameters**

*   **circuits** – circuits to be executed
*   **parameters** – Parameters of each of the quantum circuits. Defaults to `[circ.parameters for circ in circuits]`.

**Raises**

**QiskitError** – if some classical bits are not used for measurements.

## Methods

### close

<span id="qiskit.primitives.Sampler.close" />

`Sampler.close()`

Close the session and free resources

## Attributes

<span id="qiskit.primitives.Sampler.circuits" />

### circuits

Quantum circuits to be sampled.

**Returns**

The quantum circuits to be sampled.

<span id="qiskit.primitives.Sampler.parameters" />

### parameters

Parameters of quantum circuits.

**Returns**

List of the parameters in each quantum circuit.

